k8s/ingress/df-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sq
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-dev
  labels:
    ingress: sq
spec:
  rules:
    - host: my.sonarqube.io
      http:
        paths:
        - backend:
            serviceName: ce-lts-sonarqube
            servicePort: http
  tls:
    - secretName: sq-tls
      hosts:
      - my.sonarqube.io
