k8s/ingress/sq-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sq
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
  labels:
    ingress: sq
spec:
  rules:
    - host: dmeppiel.eu.ngrok.io
      http:
        paths:
        - backend:
            serviceName: ce-lts-sonarqube
            servicePort: http
